@@ -98,6 +98,7 @@ void av_register_all(void)
 
     nut_init();
     matroska_init();
+    sol_init();
 
 #ifdef CONFIG_ENCODERS
     /* image formats */
